--- a/app/src/main/res/layout/layout_list_wallet_history.xml
+++ b/app/src/main/res/layout/layout_list_wallet_history.xml
@@ -104,12 +104,14 @@
                 android:layout_height="wrap_content"
                 android:maxLines="1"
                 android:layout_marginTop="@dimen/_2sdp"
+                android:layout_marginBottom="@dimen/_3sdp"
                 android:gravity="center|start"
                 android:paddingStart="@dimen/_3sdp"
                 android:paddingEnd="@dimen/_1sdp"
                 android:fontFamily="@font/montserrat"
                 android:textColor="@color/colorTextBlackLight"
                 android:textSize="@dimen/_10sdp"
+                app:layout_constraintEnd_toStartOf="@id/view"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtAmountTransfer"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -121,10 +123,10 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:maxLines="1"
-                android:paddingEnd="@dimen/_15sdp"
-                android:paddingStart="@dimen/_1sdp"
-                android:textAlignment="viewEnd"
+                android:paddingEnd="@dimen/_1sdp"
+                android:paddingStart="@dimen/_18sdp"
                 android:layout_marginTop="@dimen/_2sdp"
+                android:layout_marginBottom="@dimen/_3sdp"
                 android:fontFamily="@font/montserrat"
                 android:textSize="@dimen/_10sdp"
                 app:layout_constraintStart_toEndOf="@+id/view"
