--- a/app/src/main/res/layout/layout_withdrawal_history.xml
+++ b/app/src/main/res/layout/layout_withdrawal_history.xml
@@ -1,3 +1,132 @@
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/_4sdp">
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/_5sdp">
+
+
+            <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/txtToken"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/_22sdp"
+                android:fontFamily="@font/montserrat"
+                android:textColor="@color/dark_text_color"
+                android:textSize="@dimen/_11sdp"
+                android:maxLines="1"
+                android:text=""
+                android:gravity="center|start"
+                android:paddingStart="@dimen/_3sdp"
+                android:paddingEnd="@dimen/_1sdp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/view"
+                />
+
+            <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/txtCreateDate"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:drawableStart="@drawable/ic_request_date"
+                android:gravity="center|start"
+                android:fontFamily="@font/montserrat"
+                android:textColor="@color/colorTextBlackLight"
+                android:textSize="@dimen/_10sdp"
+                android:text=""
+                android:drawablePadding="@dimen/_3sdp"
+                android:layout_marginStart="@dimen/_15sdp"
+                app:layout_constraintStart_toEndOf="@+id/view"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/txtAddress"
+                />
+
+            <View
+                android:id="@+id/view"
+                android:layout_width="@dimen/_1sdp"
+                android:layout_height="0dp"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/txtStatus"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat"
+                android:textSize="@dimen/_10sdp"
+                android:maxLines="1"
+                android:drawablePadding="@dimen/_5sdp"
+                android:gravity="center|start"
+                android:layout_marginTop="@dimen/_2sdp"
+                android:paddingStart="@dimen/_3sdp"
+                android:paddingEnd="@dimen/_1sdp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtToken"
+
+                />
+
+            <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/txtReason"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:layout_marginTop="@dimen/_2sdp"
+                android:layout_marginBottom="@dimen/_3sdp"
+                android:gravity="center|start"
+                android:paddingStart="@dimen/_3sdp"
+                android:paddingEnd="@dimen/_1sdp"
+                android:fontFamily="@font/montserrat"
+                android:textColor="@color/colorTextBlackLight"
+                android:textSize="@dimen/_10sdp"
+                app:layout_constraintEnd_toStartOf="@id/view"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtStatus"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:visibility="gone"
+
+                />
+
+            <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/txtAddress"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/_27sdp"
+                android:layout_marginTop="@dimen/_3sdp"
+                android:gravity="center"
+                android:fontFamily="@font/montserrat"
+                android:textColor="@android:color/white"
+                android:background="@drawable/blue_button"
+                android:textSize="@dimen/_10sdp"
+                android:text="@string/ether_scan_address"
+                android:layout_marginStart="@dimen/_18sdp"
+                android:layout_marginEnd="@dimen/_2sdp"
+                app:layout_constraintStart_toEndOf="@+id/view"
+                app:layout_constraintTop_toBottomOf="@+id/txtCreateDate"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:visibility="gone"
+                />
+
+
+
+
+        </android.support.constraint.ConstraintLayout>
+
+    </android.support.v7.widget.CardView>
+</LinearLayout>
+<!--
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -15,7 +144,7 @@
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="@dimen/_7sdp">
+            android:padding="@dimen/_3sdp">
 
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txtReqToken"
@@ -105,4 +234,4 @@
 
 
 
-</LinearLayout>
+</LinearLayout>-->
