--- a/app/src/main/res/drawable/ic_up_arrow.xml
+++ b/app/src/main/res/drawable/ic_up_arrow.xml
@@ -1,5 +1,4 @@
-<vector android:autoMirrored="true" android:height="@dimen/_20sdp"
-    android:viewportHeight="48" android:viewportWidth="48"
-    android:width="@dimen/_15sdp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#000000" android:pathData="M2.7,32.2l21.7,-16.7l21.8,16.7c0.4,0.3 1.1,0.3 1.4,-0.2c0.3,-0.4 0.3,-1.1 -0.2,-1.4L24.4,13L1.5,30.6C1,31 0.9,31.6 1.3,32C1.6,32.5 2.2,32.6 2.7,32.2L2.7,32.2z"/>
+<vector android:height="24dp" android:viewportHeight="48"
+    android:viewportWidth="48" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#393D3F" android:pathData="M34,28.9c-0.3,0 -0.6,-0.1 -0.8,-0.3L24,19.5l-9.1,9.1c-0.4,0.4 -1.2,0.4 -1.6,0s-0.4,-1.2 0,-1.6l10,-10c0.4,-0.4 1.2,-0.4 1.6,0l10,10c0.4,0.4 0.4,1.2 0,1.6C34.5,28.8 34.2,28.9 34,28.9zM46.5,24C46.5,11.6 36.4,1.5 24,1.5C11.6,1.5 1.5,11.6 1.5,24c0,12.4 10.1,22.5 22.5,22.5C36.4,46.5 46.5,36.4 46.5,24zM44.2,24c0,11.1 -9.1,20.2 -20.2,20.2C12.9,44.2 3.8,35.1 3.8,24C3.8,12.9 12.9,3.8 24,3.8C35.1,3.8 44.2,12.9 44.2,24z"/>
 </vector>
