--- a/app/src/main/res/drawable/ic_down_arrow.xml
+++ b/app/src/main/res/drawable/ic_down_arrow.xml
@@ -1,4 +1,4 @@
-<vector android:height="24dp" android:viewportHeight="48"
-    android:viewportWidth="48" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+<vector android:height="@dimen/_20sdp" android:viewportHeight="48"
+    android:viewportWidth="48" android:width="@dimen/_20sdp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#393D3F" android:pathData="M34.8,19.4c0.4,0.4 0.4,1.2 0,1.6l-10,10c-0.4,0.4 -1.2,0.4 -1.6,0l-10,-10c-0.4,-0.4 -0.4,-1.2 0,-1.6s1.2,-0.4 1.6,0l9.1,9.1l9.1,-9.1c0.2,-0.2 0.5,-0.3 0.8,-0.3C34.2,19.1 34.5,19.2 34.8,19.4zM24,1.5C11.6,1.5 1.5,11.6 1.5,24c0,12.4 10.1,22.5 22.5,22.5c12.4,0 22.5,-10.1 22.5,-22.5C46.5,11.6 36.4,1.5 24,1.5zM24,44.2C12.9,44.2 3.8,35.1 3.8,24C3.8,12.9 12.9,3.8 24,3.8c11.1,0 20.2,9.1 20.2,20.2C44.2,35.1 35.1,44.2 24,44.2z"/>
 </vector>
