--- a/app/src/main/res/layout/layout_withdrawal_history.xml
+++ b/app/src/main/res/layout/layout_withdrawal_history.xml
@@ -13,7 +13,7 @@
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/_7sdp">
+            android:padding="@dimen/_5sdp">
 
 
             <com.app.l_pesa.common.CommonTextRegular
@@ -64,16 +64,14 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/txtStatus"
+                android:id="@+id/txtRef"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat"
                 android:textSize="@dimen/_10sdp"
                 android:maxLines="1"
-                android:drawablePadding="@dimen/_5sdp"
                 android:gravity="center|start"
-                android:layout_marginTop="@dimen/_1sdp"
-                android:layout_marginBottom="@dimen/_2sdp"
+                android:layout_marginTop="@dimen/_2sdp"
                 android:paddingStart="@dimen/_3sdp"
                 android:paddingEnd="@dimen/_1sdp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -82,8 +80,26 @@
                 />
 
             <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/txtStatus"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat"
+                android:textSize="@dimen/_10sdp"
+                android:maxLines="1"
+                android:drawablePadding="@dimen/_5sdp"
+                android:gravity="center|start"
+                android:layout_marginTop="@dimen/_2sdp"
+                android:layout_marginBottom="@dimen/_2sdp"
+                android:paddingStart="@dimen/_3sdp"
+                android:paddingEnd="@dimen/_1sdp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtRef"
+
+                />
+
+            <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txtReason"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/_2sdp"
                 android:gravity="center|start"
@@ -92,11 +108,9 @@
                 android:fontFamily="@font/montserrat"
                 android:textColor="@color/colorTextBlackLight"
                 android:textSize="@dimen/_10sdp"
-                app:layout_constraintEnd_toStartOf="@id/view"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtStatus"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:visibility="gone"
 
                 />
 
@@ -127,112 +141,3 @@
 
     </android.support.v7.widget.CardView>
 </LinearLayout>
-<!--
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/screenBackground"
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android" >
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/_4sdp"
-        >
-
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="@dimen/_3sdp">
-
-            <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/txtReqToken"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/requested"
-                android:textSize="@dimen/_12sdp"
-                app:layout_constraintBottom_toTopOf="@+id/txtCreateDate"
-                android:fontFamily="@font/montserrat"
-                android:textColor="@color/dark_text_color"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/txtCreateDate"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_3sdp"
-                android:drawableStart="@drawable/ic_calendar_icon"
-                android:drawablePadding="@dimen/_3sdp"
-                android:fontFamily="@font/montserrat"
-                android:gravity="start|center"
-                android:textSize="@dimen/_11sdp"
-                android:textColor="@color/light_text_color"
-                app:layout_constraintBottom_toTopOf="@+id/txtStatus"
-                app:layout_constraintEnd_toStartOf="@+id/view46"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtReqToken" />
-
-            <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/txtStatus"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:textSize="@dimen/_11sdp"
-                android:gravity="start|center"
-                android:drawablePadding="@dimen/_5sdp"
-                android:fontFamily="@font/montserrat"
-                android:textColor="@color/light_text_color"
-                app:layout_constraintBottom_toTopOf="@+id/txtReason"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtCreateDate" />
-
-            <com.app.l_pesa.common.CustomButtonRegular
-                android:id="@+id/buttonStatus"
-                android:layout_width="@dimen/_100sdp"
-                android:layout_height="@dimen/_27sdp"
-                android:padding="@dimen/_3sdp"
-                android:textAllCaps="false"
-                android:textSize="@dimen/_10sdp"
-                android:text="@string/ether_scan_url"
-                android:textColor="@color/colorSemiWhite"
-                android:background="@drawable/blue_button"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/txtReason"
-                android:layout_marginTop="@dimen/_2sdp"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/_3sdp"
-                android:textSize="@dimen/_10sdp"
-                android:textColor="@color/dark_text_color"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtStatus" />
-
-            <View
-                android:id="@+id/view46"
-                android:visibility="invisible"
-                android:layout_width="@dimen/_1sdp"
-                android:layout_height="0dp"
-                android:background="@color/divider_color"
-                android:layout_marginRight="@dimen/_10sdp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/buttonStatus"
-                android:layout_marginLeft="@dimen/_10sdp"
-                app:layout_constraintStart_toEndOf="@+id/txtCreateDate"
-                app:layout_constraintTop_toTopOf="parent" />
-
-
-        </android.support.constraint.ConstraintLayout>
-
-    </android.support.v7.widget.CardView>
-
-
-
-</LinearLayout>-->
