--- a/app/src/main/res/layout/layout_withdrawal_history.xml
+++ b/app/src/main/res/layout/layout_withdrawal_history.xml
@@ -13,13 +13,16 @@
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/_5sdp">
+            android:paddingStart="@dimen/_5sdp"
+            android:paddingEnd="@dimen/_5sdp"
+            android:paddingBottom="@dimen/_5sdp"
+            >
 
 
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txtToken"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/_22sdp"
                 android:fontFamily="@font/montserrat"
                 android:textColor="@color/dark_text_color"
                 android:textSize="@dimen/_11sdp"
@@ -50,7 +53,7 @@
                 app:layout_constraintStart_toEndOf="@+id/view"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/txtAddress"
+                app:layout_constraintBottom_toTopOf="@+id/txtRef"
                 />
 
             <View
@@ -63,21 +66,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/txtRef"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/montserrat"
-                android:textSize="@dimen/_10sdp"
-                android:maxLines="1"
-                android:gravity="center|start"
-                android:layout_marginTop="@dimen/_2sdp"
-                android:paddingStart="@dimen/_3sdp"
-                android:paddingEnd="@dimen/_1sdp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtToken"
-
-                />
 
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txtStatus"
@@ -93,7 +81,7 @@
                 android:paddingStart="@dimen/_3sdp"
                 android:paddingEnd="@dimen/_1sdp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtRef"
+                app:layout_constraintTop_toBottomOf="@+id/txtToken"
 
                 />
 
@@ -115,25 +103,39 @@
                 />
 
             <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/txtAddress"
+                android:id="@+id/txtRef"
                 android:layout_width="0dp"
-                android:layout_height="@dimen/_27sdp"
-                android:layout_marginTop="@dimen/_2sdp"
-                android:gravity="center"
+                android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat"
-                android:textColor="@android:color/white"
-                android:background="@drawable/blue_button"
                 android:textSize="@dimen/_10sdp"
-                android:text="@string/ether_scan_address"
-                android:layout_marginStart="@dimen/_18sdp"
-                android:layout_marginEnd="@dimen/_2sdp"
-                android:layout_marginBottom="@dimen/_3sdp"
+                android:maxLines="1"
+                android:gravity="center|start"
+                android:layout_marginTop="@dimen/_2sdp"
+                android:layout_marginBottom="@dimen/_2sdp"
+                android:paddingStart="@dimen/_18sdp"
+                android:paddingEnd="@dimen/_1sdp"
                 app:layout_constraintStart_toEndOf="@+id/view"
-                app:layout_constraintTop_toBottomOf="@+id/txtCreateDate"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:visibility="gone"
+                app:layout_constraintTop_toBottomOf="@+id/txtCreateDate"
+
                 />
 
+            <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/txtAddress"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:background="#f7f9f9"
+                android:fontFamily="@font/montserrat"
+                android:gravity="center|start"
+                android:text="@string/view_etherscan"
+                android:padding="@dimen/_5sdp"
+                android:textSize="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_3sdp"
+                android:textColor="@android:color/holo_blue_dark"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtStatus" />
 
 
 
