--- a/app/src/main/res/layout/layout_withdrawal_history.xml
+++ b/app/src/main/res/layout/layout_withdrawal_history.xml
@@ -122,18 +122,17 @@
 
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txtAddress"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="#f7f9f9"
+                android:background="@drawable/bg_transparent_border_blue_view"
                 android:fontFamily="@font/montserrat"
                 android:gravity="center|start"
                 android:text="@string/view_etherscan"
-                android:padding="@dimen/_5sdp"
+                android:padding="@dimen/_6sdp"
                 android:textSize="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_3sdp"
+                android:layout_marginTop="@dimen/_7sdp"
                 android:textColor="@android:color/holo_blue_dark"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtStatus" />
 
