--- a/app/src/main/res/layout/layout_list_wallet_history.xml
+++ b/app/src/main/res/layout/layout_list_wallet_history.xml
@@ -82,7 +82,7 @@
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txtCommission"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/_22sdp"
                 android:maxLines="1"
                 android:drawableStart="@drawable/ic_commission"
                 android:gravity="center|start"
@@ -104,7 +104,6 @@
                 android:layout_width="0dp"
                 android:layout_height="@dimen/_22sdp"
                 android:maxLines="1"
-                android:layout_marginTop="@dimen/_2sdp"
                 android:gravity="center|start"
                 android:paddingStart="@dimen/_3sdp"
                 android:paddingEnd="@dimen/_1sdp"
@@ -125,7 +124,6 @@
                 android:maxLines="1"
                 android:paddingEnd="@dimen/_1sdp"
                 android:paddingStart="@dimen/_15sdp"
-                android:layout_marginTop="@dimen/_2sdp"
                 android:fontFamily="@font/montserrat"
                 android:textSize="@dimen/_10sdp"
                 android:gravity="center|start"
