--- a/app/src/main/res/layout/layout_list_transaction_history.xml
+++ b/app/src/main/res/layout/layout_list_transaction_history.xml
@@ -1,29 +1,26 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android" >
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_3sdp"
-        android:layout_marginEnd="@dimen/_3sdp"
-        android:layout_marginBottom="@dimen/_7sdp">
-
+        android:layout_margin="@dimen/_4sdp">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:padding="@dimen/_5sdp">
 
 
             <ImageView
                 android:id="@+id/imageStatus"
                 android:contentDescription="@string/app_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/_22sdp"
+                android:layout_height="@dimen/_22sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -35,7 +32,7 @@
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txtCreateDate"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/_20sdp"
                 android:drawableStart="@drawable/ic_calendar_icon"
                 android:drawablePadding="@dimen/_3sdp"
                 android:fontFamily="@font/montserrat"
@@ -50,25 +47,25 @@
 
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txtAmount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/_75sdp"
+                android:layout_height="@dimen/_20sdp"
                 android:fontFamily="@font/montserrat"
-                android:gravity="end|center"
+                android:gravity="center|start"
                 android:text=""
-                android:layout_marginEnd="@dimen/_2sdp"
+                android:paddingEnd="@dimen/_2sdp"
+                android:paddingStart="@dimen/_1sdp"
                 android:textSize="@dimen/_10sdp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/txtCreateDate"
                 app:layout_constraintBottom_toBottomOf="@+id/txtCreateDate"
                 app:layout_constraintTop_toTopOf="parent"
 
-
                 />
 
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txtRef"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/_20sdp"
                 android:layout_marginStart="@dimen/_6sdp"
                 android:textSize="@dimen/_10sdp"
                 android:fontFamily="@font/montserrat"
@@ -77,7 +74,7 @@
                 app:layout_constraintStart_toEndOf="@+id/imageStatus"
                 app:layout_constraintTop_toBottomOf="@+id/txtCreateDate"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="@dimen/_2sdp"
+                android:layout_marginTop="@dimen/_1sdp"
 
                 />
 
