--- a/app/src/main/res/layout/layout_interest_history.xml
+++ b/app/src/main/res/layout/layout_interest_history.xml
@@ -1,84 +1,79 @@
-<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    xmlns:android="http://schemas.android.com/apk/res/android" >
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/_4sdp"
-        >
+        android:layout_margin="@dimen/_4sdp">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="@dimen/_7sdp">
+            android:layout_height="wrap_content"
+            android:padding="@dimen/_5sdp">
 
 
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txtTokenValue"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/_20sdp"
                 android:textColor="@color/dark_text_color"
                 android:textSize="@dimen/_11sdp"
-                app:layout_constraintEnd_toStartOf="@+id/view41"
+                android:gravity="center|start"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/txtCreateDate"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txtCreateDate"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_2sdp"
+                android:layout_height="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_1sdp"
                 android:drawableStart="@drawable/ic_request_date"
                 android:drawablePadding="@dimen/_3sdp"
                 android:fontFamily="@font/montserrat"
                 android:textColor="@color/light_text_color"
                 android:textSize="@dimen/_10sdp"
                 android:gravity="center|start"
-                app:layout_constraintEnd_toStartOf="@+id/view41"
+                app:layout_constraintBottom_toTopOf="@+id/txtRef"
+                app:layout_constraintEnd_toStartOf="@+id/txtAmount"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtTokenValue" />
 
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txtRef"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/_20sdp"
                 android:layout_marginTop="@dimen/_2sdp"
                 android:fontFamily="@font/montserrat"
                 android:textColor="@color/light_text_color"
                 android:textSize="@dimen/_10sdp"
-                app:layout_constraintEnd_toStartOf="@+id/view41"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtCreateDate" />
-
-            <View
-                android:id="@+id/view41"
-                android:visibility="invisible"
-                android:layout_width="@dimen/_1sdp"
-                android:layout_height="0dp"
-                android:layout_marginStart="@dimen/_80sdp"
-                android:background="@color/divider_color"
+                android:gravity="center|start"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/txtCreateDate" />
 
 
 
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txtAmount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/_75sdp"
+                android:layout_height="@dimen/_20sdp"
                 android:fontFamily="@font/montserrat"
                 android:textColor="@color/colorPrimary"
-                android:textSize="@dimen/_11sdp"
+                android:textSize="@dimen/_10sdp"
+                android:gravity="start|center"
+                android:paddingEnd="@dimen/_2sdp"
+                android:paddingStart="@dimen/_1sdp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/view41"
+                app:layout_constraintStart_toEndOf="@+id/txtCreateDate"
                  />
 
 
