--- a/app/src/main/res/layout/fragment_wallet_address.xml
+++ b/app/src/main/res/layout/fragment_wallet_address.xml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/swipeRefreshLayout"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rootLayout"
     android:orientation="vertical"
@@ -109,18 +103,38 @@
                 android:layout_width="@dimen/_130sdp"
                 android:layout_height="@dimen/_30sdp"
                 android:layout_marginTop="@dimen/_14sdp"
-                android:layout_marginBottom="@dimen/_24sdp"
                 android:background="@drawable/btn_round"
                 android:fontFamily="@font/montserrat"
                 android:text="@string/update"
                 android:textAllCaps="false"
                 android:textColor="@color/colorPrimary"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/txtEtherScan"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/commonInputLayout" />
+
+            <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/txtEtherScan"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/_35sdp"
+                android:fontFamily="@font/montserrat"
+                android:gravity="center"
+                android:maxLines="1"
+                android:textStyle="bold"
+                android:hint="@string/view_etherscan"
+                android:textSize="@dimen/_12sdp"
+                android:layout_marginTop="@dimen/_3sdp"
+                android:layout_marginBottom="@dimen/_3sdp"
+                android:textColorHighlight="@color/colorAppDeep"
+                android:textColorLink="@color/colorAppDeep"
+                app:layout_constraintTop_toBottomOf="@+id/buttonWalletAddress"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+
+                />
 
         </android.support.constraint.ConstraintLayout>
 
@@ -179,4 +193,3 @@
        </android.support.v7.widget.CardView>
 
 </LinearLayout>
-</android.support.v4.widget.SwipeRefreshLayout>
